# FTIR_analysis

./: .gitignore  README.md  pyproject.toml
data/: 2022-01-21_run03_4.0res_argon_0kPa_bkgd.CSV  2022-01-21_run03_4.0res_argon_0kPa_sample.CSV  2022-01-21_run04_16.0res_argon_0kPa_bkgd.CSV  2022-01-21_run04_16.0res_argon_0kPa_sample.CSV
data/2022-01-21/: 2022-01-21_run01_4.0res_evac_-95kPa_bkgd_wavy.CSV  2022-01-21_run01_4.0res_evac_-95kPa_sample.CSV  2022-01-21_run02_4.0res_air_-5kPa_bkgd.CSV  2022-01-21_run02_4.0res_air_-5kPa_sample.CSV  2022-01-21_run05_1.0res_argon_0kPa_bkgd.CSV  2022-01-21_run05_1.0res_argon_0kPa_sample.CSV
data/2022-01-25/: 2022-01-25_run00_2.0res_evac_-93kPa_sample_ifg.CSV  2022-01-25_run00_2.0res_evac_-93kPa_spectrum.CSV  2022-01-25_run01_2.0res_air_-80kPa_sample_ifg_wavy.CSV  2022-01-25_run01_2.0res_air_-80kPa_spectrum_wavy.CSV  2022-01-25_run02_2.0res_air_-80kPa_sample_ifg.CSV  2022-01-25_run02_2.0res_air_-80kPa_spectrum.CSV  2022-01-25_run04_2.0res_air_-70kPa_sample_ifg.CSV  2022-01-25_run04_2.0res_air_-70kPa_spectrum.CSV  2022-01-25_run05_2.0res_air_-59kPa_sample_ifg.CSV  2022-01-25_run05_2.0res_air_-59kPa_spectrum.CSV  2022-01-25_run06_2.0res_air_-50kPa_sample_ifg.CSV  2022-01-25_run06_2.0res_air_-50kPa_spectrum.CSV  2022-01-25_run07_2.0res_air_-40kPa_sample_ifg.CSV  2022-01-25_run07_2.0res_air_-40kPa_spectrum.CSV  README.txt
data/2022-01-28/: 2022-01-28_run08_2.0res_air_-30kPa_sample_ifg.CSV  (+28 more)
src/: 2022-01-21.py  analysis.py  expt2_abstract.md  first_plots_2022-01-21.py  fourier.py  ftir.py  snr.py  spectra.py  water.py
(+62 files in other folders)
