[tool.poetry]
name = "ftir_analysis"
version = "0.1.0"
description = ""
authors = ["sxu0 <sxu0726@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.1"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
